--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "prefix": "!",
-    "token": "xxxxxxxxxxxxxxxx",
-    "newchannel_id": "xxxxxxxxxxxxxxxx",
-    "privatechannel_id": "xxxxxxxxxxxxxxxx"
+    "token": "xxxxxxxxxxxx",
+    "newchannel_id": "xxxxxxxxxxxx",
+    "privatechannel_id": "xxxxxxxxxxxx",
+    "serverguild_id": "xxxxxxxxxxxx"
 }
